app/telemetry/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: k8s-microservices
  labels:
    app: jaeger
spec:
  type: ClusterIP
  ports:
    - port: 16686
      targetPort: 16686
      name: ui
    - port: 14268
      targetPort: 14268
      name: http
  selector:
    app: jaeger
